k8s/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: python-app-service
spec:
  selector:
    app: python-app-label
  ports:
  # Default port used by the image
  - protocol: TCP
    port: 80
    targetPort: 5000
